--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/plugin-fs": "^2.0.2"
+    "@tauri-apps/plugin-fs": "^2.0.2",
+    "@tauri-apps/plugin-shell": "~2"
   }
 }
