--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@tauri-apps/plugin-fs": "^2.0.2",
-    "@tauri-apps/plugin-shell": "~2"
+    "@tauri-apps/plugin-shell": "~2",
+    "svelte": "5.8.1"
   }
 }
